# shareslide

./: .gitignore  AGENTS.md  FASTAPI_README.md  IFLOW.md  QWEN.md  README.md  Untitled.ipynb  all_stock.csv  gptest.csv  jinja-lsp.toml  main.py  mypy.ini  play_single.py  pyproject.toml  render.html  restructure.md  ruff.toml  run_api.py  temp.ipynb  test.ipynb
api/: main.py
api/config/: settings.py
api/models/: slide_models.py
api/routers/: data.py  slides.py
api/services/: data_service.py  slide_service.py
cache/: 2026-01-26_spot_em.csv  2026-01-29news_em.csv  2026-01-31news_em.csv  2026-02-04_sw_clean.csv  2026-02-05news_em.csv  2026-02-06news_em.csv  2026-02-399317.csv  ashare_daily_2025-09-18.csv  ashare_daily_2025-09-19.csv  ashare_daily_2025-09-20.csv  ashare_daily_2026-01-09.csv  ashare_daily_2026-01-13.csv  ashare_daily_2026-01-19.csv  sw_clean_2026-02-05.csv  sw_clean_2026-02-06.csv  sw_daily_2026-02-04.csv  sw_daily_2026-02-05.csv  sw_daily_2026-02-06.csv
cache/sw/: 2026-02-06-sw_com850111.SI.csv  2026-02-06-sw_com850113.SI.csv  2026-02-06-sw_com850122.SI.csv  2026-02-06-sw_com850135.SI.csv  2026-02-06-sw_com850136.SI.csv  2026-02-06-sw_com850142.SI.csv  2026-02-06-sw_com850151.SI.csv  2026-02-06-sw_com850152.SI.csv  2026-02-06-sw_com850154.SI.csv  2026-02-06-sw_com850172.SI.csv  2026-02-06-sw_com850173.SI.csv  2026-02-06-sw_com850181.SI.csv  2026-02-06-sw_com850232.SI.csv  2026-02-06-sw_com850233.SI.csv  2026-02-06-sw_com850322.SI.csv  2026-02-06-sw_com850323.SI.csv  2026-02-06-sw_com850324.SI.csv  2026-02-06-sw_com850325.SI.csv  2026-02-06-sw_com850326.SI.csv  2026-02-06-sw_com850331.SI.csv  2026-02-06-sw_com850332.SI.csv  2026-02-06-sw_com850333.SI.csv  2026-02-06-sw_com850335.SI.csv  2026-02-06-sw_com850337.SI.csv  2026-02-06-sw_com850338.SI.csv  2026-02-06-sw_com850339.SI.csv  2026-02-06-sw_com850341.SI.csv  2026-02-06-sw_com850343.SI.csv  2026-02-06-sw_com850351.SI.csv  2026-02-06-sw_com850353.SI.csv  2026-02-06-sw_com850354.SI.csv  2026-02-06-sw_com850355.SI.csv  2026-02-06-sw_com850362.SI.csv  2026-02-06-sw_com850363.SI.csv  (+225 more)
docs/: AKShare.md  chart-feature.md  frontend.md  index_daily_price.csv  index_detail.csv  index_sample.csv  play_single.md
myslide/: main.py
(+45 files in other folders)
