[project]
name = "slide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "akshare>=1.17.50",
    "ipython>=9.5.0",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "typer>=0.17.4",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
