[project]
name = "slide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "akshare>=1.17.50",
    "bokeh>=3.8.0",
    "chromedriver-binary>=142.0.7416.0.0",
    "ipython>=9.5.0",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "lets-plot>=4.7.3",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "plotnine[extra]>=0.15.0",
    "selenium>=4.35.0",
    "typer>=0.17.4",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# 在 pyproject.toml 中
[project.scripts]
bigslide = "myslide.main:main"
