[project]
name = "slide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "akshare>=1.17.50",
    "chromedriver-binary>=142.0.7416.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic-settings>=2.6.1",
    "ipython>=9.5.0",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "pydantic>=2.12.5",
    "pyqt5>=5.15.11",
    "selenium>=4.35.0",
    "tk>=0.1.0",
    "typer>=0.17.4",
    "matplotlib>=3.10.8",
    "baostock>=0.8.9",
    "pyecharts>=2.0.9",
    "tenacity>=9.1.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# 在 pyproject.toml 中
[project.scripts]
bigslide = "myslide.main:main"
shareslide-api = "run_api:main"

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnknownMemberType = "none"
reportUnusedCallResult = "none"
reportImplicitStringConcatenation = "none"
